fixed icons shifting

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -18,7 +18,7 @@
 }
 
 .footerIconDiv>a>img {
-  height: 75%;
+  height: 52px;
 }
 
 .footerIconDiv>a>img:hover {
